--- a/_posts/2024-08-14-cutw-prints-at-autoptic-and-inzf.html
+++ b/_posts/2024-08-14-cutw-prints-at-autoptic-and-inzf.html
@@ -16,7 +16,7 @@ singles:
 ---
 
 <p>
-  Hello Minnesota! This weekend I'l be tabling in Minneapolis at <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a> 
+  Hello Minnesota! This weekend I'll be tabling in Minneapolis at <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a> 
   on 8/17 and <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a> on 8/18.
   I'll be debuting 4 new prints from my upcoming graphic novel <a href="/chrysanthemum-under-the-waves">Chrysanthemum Under the Waves</a>.
   I'll also be giving away Chrysanthemum Under the Waves preorder mini-posters, so stop by for one!
