remove sour berries and autoptic

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -114,7 +114,7 @@ doubles:
   <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
   <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
   <li>☞ 6/30 oddball market, the Empty Bottle, Chicago, IL</li>
-  <li>☞ 8/17 <a href="https://autoptic.org/" target="_blank">Autoptic Festival</a>, Minneapolis, MN</li>
+  <li>☞ 8/17 Autoptic Festival, Minneapolis, MN</li>
   <li>☞ 8/18 <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a>, Minneapolis, MN</li>
   <li>☞ 8/24-25 <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a>, Chicago, IL</li>
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
