remove rocket ships and INZF link

--- a/_pages/toys.html
+++ b/_pages/toys.html
@@ -12,8 +12,10 @@ description: I crochet the toys with acrylic yarns, but wool and other materials
 
 <div class="gallery">
   {% assign all_toys = site.data.toys.minibuns | concat:
-  site.data.toys.rocketpods | concat: site.data.toys.rocketships | concat: 
+  site.data.toys.rocketpods | concat: 
   site.data.toys.flyingsaucers | concat: 
   site.data.toys.nunions %} {% assign random_items = all_toys | sample: 20
   %} {% for item in random_items %} {% include products-toys.html %} {% endfor %}
 </div>
+
+<!-- | concat: site.data.toys.rocketships -->
