--- a/_pages/index.html
+++ b/_pages/index.html
@@ -115,7 +115,7 @@ doubles:
   <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
   <li>☞ 6/30 oddball market, the Empty Bottle, Chicago, IL</li>
   <li>☞ 8/17 Autoptic Festival, Minneapolis, MN</li>
-  <li>☞ 8/18 <a href="https://www.ejoymehr.com/#inzf" target="_blank">INZF (Insert Name Zine Fest)</a>, Minneapolis, MN</li>
+  <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
   <li>☞ 8/24-25 <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a>, Chicago, IL</li>
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
