remove rocket ships and INZF link

--- a/_pages/books/we-are-hungry.html
+++ b/_pages/books/we-are-hungry.html
@@ -26,9 +26,27 @@ summaries:
   - A Mother's love for her babies transforms them into hunters. Printed with hand-carved linocut stamps. This zine stars an Amaurobius ferox mother (aka black lace-weaver spider), her babies and trophic eggs.
 blurbs:
   - love love love <br />&mdash; dakota knicks
+  - ghost prints <br />&mdash; ShayLee Bissell
 reviews:
   - baby spiders like tiny stars <br />&mdash; Anthony Tadlock
-  - ghost prints <br />&mdash; ShayLee Bissell
+  - One of a slate of recent releases by Umber, each of which have wildly 
+    different aims visually and narratively. She leaves color behind for this
+    one. A stark comic composed of open landscape pages and blocked 
+    printed letters and spiders. WE ARE HUNGRY (everything is in all caps 
+    in here) is a short tale of matriphagy. This is where a mother's young 
+    eat her body. A process natural to some spider species. All the 
+    phrasing is urgent and clipped. With gems like, "OUR VENOM 
+    COURSES THROUGH ITS BODY" stamped out in rigid black letters. 
+    It's less anthropomorphism, and more a translation of the baby
+    spiders' base desire for survival. The central image is a huge black
+    spider and her brood&mdash; made with stamps. Some dark, others ligher
+    and "off register" creating an echoing or skittering effect. There is an
+    insatiable hunger for these growing offspring. The simple language
+    and compositions make this read something like a demented board
+    book. The the stark image of the tiny spiders overwhelming their 
+    mother is anything but comforting. It's eerie, but also kind of 
+    endearing. The ultimate maternal sacrifice. <br />
+    &mdash; <a href="https://www.comicsblogger.net/product/comics-blogger-7" target="_blank">Comics Blogger</a>
 events:
   - Advanced copies at Zine Pavilion, ALA (American Library Association), 2023
   - Debuted at ZINEmercado, 2023
