add James Duncan and French edition

--- a/_pages/wholesale/wholesale-sound-of-snow-falling.html
+++ b/_pages/wholesale/wholesale-sound-of-snow-falling.html
@@ -16,7 +16,7 @@ images:
     alt: "back cover of Sound of Snow Falling with blurb by Julie Zickefoose and barcode"
 price: <s>Retail $23</s> <br />Wholesale $11.50
 button_id: B4BG3UL7DAWT2
-pages: 104 pgs, 6.8 in x 8.5 in
+pages: introduction by owl expert <a href="https://discoverowls.ca/" target="_blank">James Duncan</a></br> 104 pgs, 6.8 in x 8.5 in
 materials: full color offset, flexibound
 trailer:
   path: /assets/videos/maggie-umber-sound-of-snow-falling-trailer.mp4
@@ -38,4 +38,5 @@ events:
   - It is a <a href="http://on-panel.com/BAC2018/" target="_blank">BEST AMERICAN COMICS</a> 2018 Notable title, selected by Bill Kartalopoulos
   - '11/13/21-5/8/22 <a href="https://cartoons.osu.edu/events/power-lines-comics-and-the-environment/" target="_blank">Power Lines: Comics and the Environment</a>, The Billy Ireland Cartoon Library & Museum, Columbus, OH. Curated by Jared Gardner and Elizabeth Hewitt'
   - original art held in several private collections
+  - 2022 hardcover, French edition of Sound of Snow Falling (Le bruit de la neige qui tombe), published by <a href="https://larobenoire.wixsite.com/editions/catalogue" target="_blank">Les éditions la robe noire</a>
 ---
