fix spelling mistake

--- a/_pages/books/we-are-hungry.html
+++ b/_pages/books/we-are-hungry.html
@@ -39,7 +39,7 @@ reviews:
     COURSES THROUGH ITS BODY" stamped out in rigid black letters. 
     It's less anthropomorphism, and more a translation of the baby
     spiders' base desire for survival. The central image is a huge black
-    spider and her brood&mdash; made with stamps. Some dark, others ligher
+    spider and her brood&mdash; made with stamps. Some dark, others lighter
     and "off register" creating an echoing or skittering effect. There is an
     insatiable hunger for these growing offspring. The simple language
     and compositions make this read something like a demented board
