add links to post

--- a/_posts/2024-08-23-cake-and-vol-1-brooklyn-review.html
+++ b/_posts/2024-08-23-cake-and-vol-1-brooklyn-review.html
@@ -14,7 +14,8 @@ doubles:
 
 <p>
   <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> got its first review! 
-  Thank you to artist, writer and critic Dmitry Samarov. He says:
+  Thank you to artist, writer and critic <a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">Dmitry Samarov</a>. 
+  He says:
 </p>
 <blockquote cite="https://vol1brooklyn.com/2024/08/13/review-chrysanthemum-under-the-waves/">
   Somehow Umber manages to make the heaviness of the subject-matter bearable, even beautiful. 
@@ -35,6 +36,7 @@ doubles:
 </p>
 <p>
   For anyone who stops by, I'll have flyers for my upcoming October 25th book launch at 
-  Tangible Books. Also, if you'd like to sneak a peek, I'll have an advanced copy of 
+  <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Tangible Books</a>. 
+  Also, if you'd like to sneak a peek, I'll have an advanced copy of 
   <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a>!
 </p>
