fix Tangible links

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -101,7 +101,7 @@ doubles:
   9/26-9/29/2024 and on the fall leg of my Less is More Zine Tour.
 </p>
 <p>
-  The book release party will be held at <a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">Tangible Books</a> in Chicago on 10/25/2024.
+  The book release party will be held at <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Tangible Books</a> in Chicago on 10/25/2024.
 </p>
 {% include blog-double.html %}
 <p>🖤</p>
@@ -121,7 +121,7 @@ doubles:
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
   <li>☞ 10/5 <a href="https://aadl.org/a2cafsip" target="_blank">A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press)</a>, Ann Arbor, MI </li>
-  <li>☞ 10/25 <a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
+  <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
   <li>☞ 11/2 <a href="http://shortrun.org/" target="_blank">Short Run Comix Festival</a>, Seattle, WA</li>
 </ul>
