--- a/_posts/2024-08-23-cake-and-vol-1-brooklyn-review.html
+++ b/_posts/2024-08-23-cake-and-vol-1-brooklyn-review.html
@@ -32,11 +32,11 @@ doubles:
   <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a> 
   all this weekend. I might have contributor copies of 
   <a href="https://www.seanknickerbocker.com/store/rust-belt-review-volume-five-e25yy" target="_blank">Rust Belt Review Vol 6</a> 
-  on hand! In honor of CAKE I'll also have a new toy design, the Cupcake Mini Bun!
+  on hand! In honor of CAKE I'll also have a new toy, the Cupcake Mini Bun!
 </p>
 <p>
   For anyone who stops by, I'll have flyers for my upcoming October 25th book launch at 
   <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Tangible Books</a>. 
-  Also, if you'd like to sneak a peek, I'll have an advanced copy of 
+  If you'd like to sneak a peek, I'll also have an advanced copy of 
   <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a>!
 </p>
