mark CAKE as done

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -116,7 +116,7 @@ doubles:
   <li>☞ 6/30 oddball market, the Empty Bottle, Chicago, IL</li>
   <li>☞ 8/17 Autoptic Festival, Minneapolis, MN</li>
   <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
-  <li>☞ 8/24-25 <a href="https://www.cakechicago.com/" target="_blank">CAKE (Chicago Alternative Comics Expo)</a>, Chicago, IL</li>
+  <li>☞ 8/24-25 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
   <li>☞ 9/8 <a href="https://www.instagram.com/zinemercado/" target="_blank">ZINEmercado Zine Fest</a>, Chicago, IL</li>
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
