--- a/_posts/2024-09-01-pallets-of-cutw-arrive.html
+++ b/_posts/2024-09-01-pallets-of-cutw-arrive.html
@@ -17,17 +17,15 @@ singles:
 
 <p> The two pallets of my self-published graphic novel
   <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> have
-  arrived! Thank you to everyone who has taken an interest in my book. Please consider 
-  preordering or buy from me on tour. Help spread the word by telling your friends and 
-  sharing my posts on social media.
+  arrived! Thank you to everyone who preordered!!!
 </p>
 {% include blog-double.html %}
 <p>
   I'll have advanced copies of Chrysanthemum Under the Waves at my table at 
   <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>
-   9/28-9/29. Preorders ship early in October. The book launch takes place at 
+   9/28-9/29. Preorders from maggieumber.com ship early October. The book launch takes place at 
    <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Tangible
-    Books</a> in Chicago on 10/25. It will be spooky!
+    Books</a> in Chicago 10/25. It will be spooky!
 </p>
 <p>
   Thank you to <a href="https://printninja.com/" target="_blank">
