--- a/_pages/index.html
+++ b/_pages/index.html
@@ -117,7 +117,7 @@ doubles:
   <li>☞ 8/17 Autoptic Festival, Minneapolis, MN</li>
   <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
   <li>☞ 8/24-25 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
-  <li>☞ 9/8 <a href="https://www.instagram.com/zinemercado/" target="_blank">ZINEmercado Zine Fest</a>, Chicago, IL</li>
+  <li>☞ 9/8 ZINEmercado Zine Fest, Chicago, IL</li>
   <li>☞ 9/14-15 <a href="https://www.theurbanbirdingfestival.org/" target="_blank">The Urban Birding Festival</a>, Chicago, IL</li>
   <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
   <li>☞ 10/5 <a href="https://aadl.org/a2cafsip" target="_blank">A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press)</a>, Ann Arbor, MI </li>
