add partners and son

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -32,6 +32,8 @@ description: Each of my zines is printed on demand using my inkjet printer and f
   Los Angeles, CA</li>
   <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
   Portland, OR</li>
+  <li><a href="https://partnersandson.com/search?q=Maggie+Umber&options%5Bprefix%5D=last" target="_blank">☞ Partners and Son</a>
+    Philadelphia, PA</li>
   <li><a href="https://copaceticcomics.com/creators/maggie-umber" target="_blank">☞ The Copacetic Comics Company</a>
   Pittsburgh, PA</li>
   <li><a href="https://atomicbooks.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Atomic Books</a>, Baltimore, MD</li>
