update CXC post

--- a/_posts/2024-09-23-cutw-advanced-deubut-at-cxc.html
+++ b/_posts/2024-09-23-cutw-advanced-deubut-at-cxc.html
@@ -8,9 +8,12 @@ cover:
 ---
 
 <p>
-  This weekend, I'll be tabling at <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a> 
-  with <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a> 
-  advanced debut copies! I'll also being doing a spotlight panel with Jared Gardner.
+  This weekend, I'll be tabling 
+  <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a> 
+  as a special guest. This will be my first show ever with 
+  <a href="/chrysanthemum-under-the-waves.html">Chrysanthemum Under the Waves</a>! Stop by and buy 
+  a copy of my first self-published graphic novel! I'll also be doing a spotlight panel with Jared 
+  Gardner. 
 </p>
 <p>
   <a href="https://cartooncrossroadscolumbus.org/session/the-sounds-of-silence-spotlight-on-maggie-umber/" target="_blank">The Sounds of Silence: Spotlight on Maggie Umber</a> <br />
