fix error in post

--- a/_posts/2024-09-23-cutw-advanced-deubut-at-cxc.html
+++ b/_posts/2024-09-23-cutw-advanced-deubut-at-cxc.html
@@ -37,7 +37,7 @@ cover:
   270° — and her work has been widely anthologized. 
 </p>
 <p>
-  Her latest book Chryanthemum Under The Waves will debut at CXC.
+  Her latest book Chrysanthemum Under The Waves will debut at CXC.
 </p>
 <p>
   Guest Courtesy of Popular Culture Studies at Ohio State University <br />
