--- a/_pages/index.html
+++ b/_pages/index.html
@@ -119,7 +119,7 @@ doubles:
   <li>☞ 8/24-25 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
   <li>☞ 9/8 ZINEmercado Zine Fest, Chicago, IL</li>
   <li>☞ 9/14-15 The Urban Birding Festival, Chicago, IL</li>
-  <li>☞ 9/26-29 <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>, Columbus, OH</li>
+  <li>☞ 9/26-29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
   <li>☞ 10/5 <a href="https://aadl.org/a2cafsip" target="_blank">A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press)</a>, Ann Arbor, MI </li>
   <li>☞ 10/12 <a href="https://www.instagram.com/p/DAPDdTguzuF/?img_index=1" target="_blank">Chicago Printers Guild Publishers Fair</a> Chicago, IL</li>
   <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
