--- a/_pages/index.html
+++ b/_pages/index.html
@@ -110,16 +110,16 @@ doubles:
 <h2>Upcoming Events</h2>
 <h3>2024: The Less is More Zine Tour</h3>
 <ul>
-  <li>☞ 4/27 Madison Print & Resist Zine Fest, Madison, WI</li>
-  <li>☞ 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
-  <li>☞ 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
-  <li>☞ 6/30 oddball market, the Empty Bottle, Chicago, IL</li>
-  <li>☞ 8/17 Autoptic Festival, Minneapolis, MN</li>
-  <li>☞ 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
-  <li>☞ 8/24-25 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
-  <li>☞ 9/8 ZINEmercado Zine Fest, Chicago, IL</li>
-  <li>☞ 9/14-15 The Urban Birding Festival, Chicago, IL</li>
-  <li>☞ 9/26-29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
+  <li>&#10004; 4/27 Madison Print & Resist Zine Fest, Madison, WI</li>
+  <li>&#10004; 6/14-7/7 Drawing Worlds: The art of comics and beyond, A2AC (The Ann Arbor Art Center), Ann Arbor, MI</li>
+  <li>&#10004; 6/15 ZND Fest (Zine Not Dead Fest: A Comics and Small Press Fair), Chicago, IL</li>
+  <li>&#10004; 6/30 oddball market, the Empty Bottle, Chicago, IL</li>
+  <li>&#10004; 8/17 Autoptic Festival, Minneapolis, MN</li>
+  <li>&#10004; 8/18 INZF (Insert Name Zine Fest), Minneapolis, MN</li>
+  <li>&#10004; 8/24-25 CAKE (Chicago Alternative Comics Expo), Chicago, IL</li>
+  <li>&#10004; 9/8 ZINEmercado Zine Fest, Chicago, IL</li>
+  <li>&#10004; 9/14-15 The Urban Birding Festival, Chicago, IL</li>
+  <li>&#10004; 9/26-29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
   <li>☞ 10/5 <a href="https://aadl.org/a2cafsip" target="_blank">A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press)</a>, Ann Arbor, MI </li>
   <li>☞ 10/12 <a href="https://www.instagram.com/p/DAPDdTguzuF/?img_index=1" target="_blank">Chicago Printers Guild Publishers Fair</a> Chicago, IL</li>
   <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
