update blog post with new event

--- a/_posts/2024-10-02-a2caf-sip-sat-and-preorders-shipped.html
+++ b/_posts/2024-10-02-a2caf-sip-sat-and-preorders-shipped.html
@@ -29,6 +29,9 @@ singles:
   Art. Our friends at Vault of Midnight will be at A2CAF Small + Indie Press selling books by all our 
   headliners for signings.
 </p>
+<p>UPDATE: Sunday Oct 6 10:30–4:30, I'll be tabling at
+  <a href="https://milkcomicfest.org/" target="_blank">MILK Fest</a> in Milwaukee, WI! I just got 
+  off the wait list, and I'm so excited to add this stop to my tour :D</p>
 <p>
   Thank you to everyone who picked up their advanced debut copy of Chrysanthemum
   Under the Waves last weekend at Cartoon Crossroads Columbus. I am so grateful to you all and to 
@@ -50,9 +53,9 @@ singles:
   Chicago, IL</li>
   <li><a href="https://www.howlingpages.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Howling Pages</a>, 
   Chicago, IL</li>
-  <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
+  <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>,
   Portland, OR</li>
-  <li><a href="https://partnersandson.com/search?q=Maggie+Umber&options%5Bprefix%5D=last" target="_blank">☞ Partners and Son</a>
+  <li><a href="https://partnersandson.com/search?q=Maggie+Umber&options%5Bprefix%5D=last" target="_blank">☞ Partners and Son</a>,
     Philadelphia, PA</li>
   <li><a href="https://dominobooks.org/store.html" target="_blank">☞ Domino Books</a>, Brooklyn, NY</li>
   <li><a href="https://www.comicsblogger.net/" target="_blank">☞ Comics Blogger</a>, NC</li>
