--- a/_pages/index.html
+++ b/_pages/index.html
@@ -125,6 +125,7 @@ doubles:
   <li>☞ 10/12 <a href="https://www.instagram.com/p/DAPDdTguzuF/?img_index=1" target="_blank">Chicago Printers Guild Publishers Fair</a> Chicago, IL</li>
   <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
+  <li>☞ 11/1 <a href="https://www.fantagraphics.com/pages/fantagraphics-bookstore-gallery" target="_blank">Marathon Art Show</a>, Fantagraphics Bookstore & Gallery, Seattle, WA</li>
   <li>☞ 11/2 <a href="http://shortrun.org/" target="_blank">Short Run Comix Festival</a>, Seattle, WA</li>
   <li>☞ 11/15-17 <a href="https://www.stapleandstitchfair.com/" target="_blank">Staple + Stitch Art Book and Print Fair</a>, Chicago, IL </li>
 </ul>
