add new blurb, update event

--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -72,10 +72,10 @@ blurbs:
     Magical feats of comics communication within these stories, beautiful tricks of mark making 
     expressing what cannot be said. <br />I really love this book, very much. 
     <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
-  - i think the style rine is in makes the elements of the house feel organic like its a shipwreck w urn corals & chandelier anemones growing & i love that <br />&mdash; lympho nodge
+  - Maggie Umber has one of the most distinctive and unique cartooning styles in comics, and she now presents us with her most ambitious work yet, a (mostly) silent horror themed work. <br />&mdash; <a href="https://dominobooks.org/chrysanthemum.html" target="_blank">Austin English, Domino Books</a>
 events:
   - 10/25/2024 Chrysanthemum Under the Waves Book Release Party @ Tangible Books, Chicago, IL
-  - 9/26-9/29/2024 advanced copies at CXC (Cartoon Crossroads Columbus), 2024
+  - '9/26-9/29/2024 <a href="https://cartooncrossroadscolumbus.org/cxc-2024-special-guests/" target="_blank">special guest</a> with advanced copies at CXC (Cartoon Crossroads Columbus), plus <a href="https://cartooncrossroadscolumbus.org/session/the-sounds-of-silence-spotlight-on-maggie-umber/" target="_blank">The Sounds of Silence: Spotlight on Maggie Umber</a> conversation with OSU comics scholar Jared Gardner 2024'
   - '8/9/2024 interview on the <a href="https://huuno.dmitrysamarov.com/podcast/maggie-umber/" target="_blank">hu u no podcast.
     Click here to listen to the episode.</a> Artist and writer Dmitry Samarov and I talk about Chrysanthemum Under the Waves, 
     self-publishing vs working with a publisher, my history as an cartoonist and why I left 2dcloud.'
