add new bookstores

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -32,11 +32,14 @@ description: Each of my zines is printed on demand using my inkjet printer and f
   Los Angeles, CA</li>
   <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
   Portland, OR</li>
+  <li><a href="https://dominobooks.org/chrysanthemum.html" target="_blank">☞ Domino Books</a>, Brooklyn, NY</li>
   <li><a href="https://partnersandson.com/search?q=Maggie+Umber&options%5Bprefix%5D=last" target="_blank">☞ Partners and Son</a>
     Philadelphia, PA</li>
   <li><a href="https://copaceticcomics.com/creators/maggie-umber" target="_blank">☞ The Copacetic Comics Company</a>
   Pittsburgh, PA</li>
   <li><a href="https://atomicbooks.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Atomic Books</a>, Baltimore, MD</li>
+  <li><a href="https://www.comicsblogger.net/" target="_blank">☞ Comics Blogger</a>, NC</li>
   <li><a href="https://www.beguilingbooks.com/browse/filter/t/Maggie%20Umber/k/keyword" target="_blank">☞ The Beguiling</a>, 
   Toronto, ON</li>
+  <li><a href="https://goshlondon.com/" target="_blank">☞ Gosh! Comics</a> London, UK</li>
 </ul>
