--- a/_pages/index.html
+++ b/_pages/index.html
@@ -121,7 +121,7 @@ doubles:
   <li>&#10004; 9/14-15 The Urban Birding Festival, Chicago, IL</li>
   <li>&#10004; 9/26-29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
   <li>&#10004; 10/5 A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press), Ann Arbor, MI </li>
-  <li>☞ 10/6 <a href="https://milkcomicfest.org/" target="_blank">MILK Fest (Milwaukee Independent Local Comics Fest)</a>, WI </li>
+  <li>&#10004; 10/6 MILK Fest (Milwaukee Independent Local Comics Fest), WI </li>
   <li>☞ 10/12 <a href="https://www.instagram.com/p/DAPDdTguzuF/?img_index=1" target="_blank">Chicago Printers Guild Publishers Fair</a> Chicago, IL</li>
   <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
