add new CUTW quote and post

--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -73,6 +73,7 @@ blurbs:
     expressing what cannot be said. <br />I really love this book, very much. 
     <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
   - Maggie Umber has one of the most distinctive and unique cartooning styles in comics, and she now presents us with her most ambitious work yet, a (mostly) silent horror themed work. <br />&mdash; <a href="https://dominobooks.org/chrysanthemum.html" target="_blank">Austin English, Domino Books</a>
+  - Maggie Umber's brilliant new graphic novel Chrysanthemum Under The Waves. A raw, moving, at times austere visual journey. Easily one of the Books of the Year. <br />&mdash; Thomas Campbell, Comics Blogger
 events:
   - 10/25/2024 Chrysanthemum Under the Waves Book Release Party @ Tangible Books, Chicago, IL
   - '9/26-9/29/2024 <a href="https://cartooncrossroadscolumbus.org/cxc-2024-special-guests/" target="_blank">special guest</a> with advanced copies at CXC (Cartoon Crossroads Columbus), plus <a href="https://cartooncrossroadscolumbus.org/session/the-sounds-of-silence-spotlight-on-maggie-umber/" target="_blank">The Sounds of Silence: Spotlight on Maggie Umber</a> conversation with OSU comics scholar Jared Gardner 2024'
