--- a/_posts/2024-10-09-cpg-publishers-fair-sat-cutw-stores.html
+++ b/_posts/2024-10-09-cpg-publishers-fair-sat-cutw-stores.html
@@ -51,8 +51,8 @@ singles:
 </blockquote>
 
 <p>
-  And finally, I just mailed a watercolor to the Marathon Art Show. It'll be hung at Fantagraphics 
-  Bookstore & Gallery in Seattle, WA.
+  I'll also have a Chrysanthemum Under the Waves watercolor hanging in the Marathon Art Show at 
+  Fantagraphics Bookstore & Gallery in Seattle, WA.
 </p>
 
 {% include blog-single.html %}
