--- a/_posts/2024-10-09-cpg-publishers-fair-sat-cutw-stores.html
+++ b/_posts/2024-10-09-cpg-publishers-fair-sat-cutw-stores.html
@@ -36,7 +36,7 @@ singles:
   <a href="https://www.howlingpages.com/search?type=product&q=Maggie+Umber" target="_blank">Howling Pages</a>
   in Chicago, IL and Gina Dawson holds up all the comics she ordered for 
   <a href="https://partnersandson.com/search?q=Maggie+Umber&options%5Bprefix%5D=last" target="_blank">Partners and Son</a>
-    in Philadelphia, PA including CUTW. Here's some words on my new graphic novel from Domino Books 
+    in Philadelphia, PA. Here's some words on my new graphic novel from Domino Books 
     and Comics Blogger who will be distroing this book:
 </p>
 <blockquote>
