another edit to post

--- a/_posts/2024-10-09-cpg-publishers-fair-sat-cutw-stores.html
+++ b/_posts/2024-10-09-cpg-publishers-fair-sat-cutw-stores.html
@@ -51,7 +51,7 @@ singles:
 </blockquote>
 
 <p>
-  I'll also have a Chrysanthemum Under the Waves watercolor hanging in the Marathon Art Show at 
+  Soon, I'll also have a Chrysanthemum Under the Waves watercolor hanging in the Marathon Art Show at 
   Fantagraphics Bookstore & Gallery in Seattle, WA.
 </p>
 
