remove finished event link

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -122,7 +122,7 @@ doubles:
   <li>&#10004; 9/26-29 CXC (Cartoon Crossroads Columbus), Columbus, OH</li>
   <li>&#10004; 10/5 A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press), Ann Arbor, MI </li>
   <li>&#10004; 10/6 MILK Fest (Milwaukee Independent Local Comics Fest), WI </li>
-  <li>☞ 10/12 <a href="https://www.instagram.com/p/DAPDdTguzuF/?img_index=1" target="_blank">Chicago Printers Guild Publishers Fair</a> Chicago, IL</li>
+  <li>&#10004; 10/12 Chicago Printers Guild Publishers Fair, Chicago, IL</li>
   <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
   <li>☞ 11/1 <a href="https://www.fantagraphics.com/pages/fantagraphics-bookstore-gallery" target="_blank">Marathon Art Show</a>, Fantagraphics Bookstore & Gallery, Seattle, WA</li>
