add new bookshop link

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -28,8 +28,6 @@ description: Each of my zines is printed on demand using my inkjet printer and f
   Chicago, IL</li>
   <li><a href="https://www.vaultofmidnight.com/" target="_blank">☞ Vault of Midnight</a>,
   Ann Arbor, MI</li>
-  <li><a href="https://otherbooksla.com/search?q=Maggie+Umber" target="_blank">☞ Other Books LA</a>,
-  Los Angeles, CA</li>
   <li><a href="https://floating-world-comics.myshopify.com/search?q=Maggie+Umber" target="_blank">☞ Floating World Comics</a>
   Portland, OR</li>
   <li><a href="https://dominobooks.org/chrysanthemum.html" target="_blank">☞ Domino Books</a>, Brooklyn, NY</li>
@@ -41,5 +39,5 @@ description: Each of my zines is printed on demand using my inkjet printer and f
   <li><a href="https://www.comicsblogger.net/" target="_blank">☞ Comics Blogger</a>, NC</li>
   <li><a href="https://www.beguilingbooks.com/browse/filter/t/Maggie%20Umber/k/keyword" target="_blank">☞ The Beguiling</a>, 
   Toronto, ON</li>
-  <li><a href="https://goshlondon.com/" target="_blank">☞ Gosh! Comics</a> London, UK</li>
+  <li><a href="https://goshlondon.com/chrysanthemum-under-the-waves-sc/" target="_blank">☞ Gosh! Comics</a>, London, UK</li>
 </ul>
