--- a/_pages/books.html
+++ b/_pages/books.html
@@ -39,5 +39,5 @@ description: Each of my zines is printed on demand using my inkjet printer and f
   <li><a href="https://www.comicsblogger.net/" target="_blank">☞ Comics Blogger</a>, NC</li>
   <li><a href="https://www.beguilingbooks.com/browse/filter/t/Maggie%20Umber/k/keyword" target="_blank">☞ The Beguiling</a>, 
   Toronto, ON</li>
-  <li><a href="https://goshlondon.com/chrysanthemum-under-the-waves-sc/" target="_blank">☞ Gosh! Comics</a>, London, UK</li>
+  <li><a href="https://goshlondon.com/search.php?search_query=%22Maggie+Umber%22" target="_blank">☞ Gosh! Comics</a>, London, UK</li>
 </ul>
