--- a/_pages/index.html
+++ b/_pages/index.html
@@ -123,7 +123,7 @@ doubles:
   <li>&#10004; 10/5 A2CAF: SIP (Ann Arbor Comic Arts Festival: Small + Indie Press), Ann Arbor, MI </li>
   <li>&#10004; 10/6 MILK Fest (Milwaukee Independent Local Comics Fest), WI </li>
   <li>&#10004; 10/12 Chicago Printers Guild Publishers Fair, Chicago, IL</li>
-  <li>☞ 10/25 <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
+  <li>☞ 10/25 <a href="https://tangiblebookschicago.com/" target="_blank">Chrysanthemum Under the Waves Book Release Party @ Tangible Books</a>, Chicago, IL</li>
   <li>☞ 10/26 <a href="https://www.slicexpo.org/" target="_blank">SLICE (St. Louis Independent Comics Expo)</a>, St. Louis, MO</li>
   <li>☞ 11/1 <a href="https://www.fantagraphics.com/pages/fantagraphics-bookstore-gallery" target="_blank">Marathon Art Show</a>, Fantagraphics Bookstore & Gallery, Seattle, WA</li>
   <li>☞ 11/2 <a href="http://shortrun.org/" target="_blank">Short Run Comix Festival</a>, Seattle, WA</li>
