update cutw blurbs

--- a/_pages/books.html
+++ b/_pages/books.html
@@ -22,7 +22,7 @@ description: Each of my zines is printed on demand using my inkjet printer and f
 
 <h2 id="bookstores">Bookstores that carry my books:</h2>
 <ul>
-  <li><a href="https://chicagoliteraryhof.org/blog/entry/tangible-books-comes-to-bridgeport" target="_blank">☞ Tangible Books</a>,
+  <li><a href="https://tangiblebookschicago.com/" target="_blank">☞ Tangible Books</a>,
   Chicago, IL</li>
   <li><a href="https://www.howlingpages.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Howling Pages</a>, 
   Chicago, IL</li>
@@ -37,6 +37,7 @@ description: Each of my zines is printed on demand using my inkjet printer and f
   Pittsburgh, PA</li>
   <li><a href="https://atomicbooks.com/search?type=product&q=Maggie+Umber" target="_blank">☞ Atomic Books</a>, Baltimore, MD</li>
   <li><a href="https://www.comicsblogger.net/" target="_blank">☞ Comics Blogger</a>, NC</li>
+  <li><a href="https://www.wigshopwebshop.com/books/maggie-umber-chrysanthemum-under-the-waves" target="_blank">☞ Wig Shop Web Shop</a>, Denver, CO</li>
   <li><a href="https://www.beguilingbooks.com/browse/filter/t/Maggie%20Umber/k/keyword" target="_blank">☞ The Beguiling</a>, 
   Toronto, ON</li>
   <li><a href="https://goshlondon.com/search.php?search_query=%22Maggie+Umber%22" target="_blank">☞ Gosh! Comics</a>, London, UK</li>
