--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -57,7 +57,7 @@ reviews:
     linking so many separate pieces and many of them wordless, it could be challenging to many readers, 
     for sure. It was for me, but it pays off for the work I invested. I can’t wait to see it in paper 
     next month. It’s tremendous. 
-    <br />&mdash; <a href="https://www.goodreads.com/book/show/75456317-chrysanthemum-under-the-waves?ac=1&from_search=true&qid=UxqWBhR375&rank=1" target="_blank">Dave Schaafsma, goodreads</a>'
+    <br />&mdash; <a href="https://www.goodreads.com/book/show/75456317-chrysanthemum-under-the-waves?ac=1&from_search=true&qid=UxqWBhR375&rank=1" target="_blank">Dave Schaafsma, Professor and Director of English Education at University of Illinois Chicago</a>'
   - This is a collection of stories... but it’s amazingly unified in mood. Many of these seem to 
     reference old movies, or at least how people were dressed back then. They’re all narrative pieces, 
     but (mostly) wordless, and it’s a bit vague what the story actually is — which works wonderfully, 
@@ -72,10 +72,11 @@ blurbs:
     Magical feats of comics communication within these stories, beautiful tricks of mark making 
     expressing what cannot be said. <br />I really love this book, very much. 
     <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
-  - Maggie Umber has one of the most distinctive and unique cartooning styles in comics, and she now presents us with her most ambitious work yet, a (mostly) silent horror themed work. <br />&mdash; <a href="https://dominobooks.org/chrysanthemum.html" target="_blank">Austin English, Domino Books</a>
-  - Maggie Umber's brilliant new graphic novel Chrysanthemum Under The Waves. A raw, moving, at times austere visual journey. Easily one of the Books of the Year. <br />&mdash; Thomas Campbell, Comics Blogger
+  - Maggie Umber has one of the most distinctive and unique cartooning styles in comics , and she now presents us with her most ambitious work yet, a (mostly) silent horror themed work. <br />&mdash; <a href="https://dominobooks.org/chrysanthemum.html" target="_blank">Austin English, Domino Books</a>
+  - Maggie Umber's brilliant new graphic novel Chrysanthemum Under The Waves. A raw, moving, at times austere visual journey. Easily one of the Books of the Year. <br />&mdash; <a href="https://www.comicsblogger.net/product/chrysanthemum-under-the-waves" target="_blank">Thomas Campbell, Comics Blogger</a>
+  - Gorgeous, ethereal cartooning, painterly and meditative. <br />&mdash; <a href="https://www.wigshopwebshop.com/books/maggie-umber-chrysanthemum-under-the-waves" target="_blank">Wig Shop Web Shop</a>
 events:
-  - 10/25/2024 Chrysanthemum Under the Waves Book Release Party @ Tangible Books, Chicago, IL
+  - 10/25/2024 Chrysanthemum Under the Waves Book Release Party, <a href="https://tangiblebookschicago.com/" target="_blank">Tangible Books</a>, Chicago, IL
   - '9/26-9/29/2024 <a href="https://cartooncrossroadscolumbus.org/cxc-2024-special-guests/" target="_blank">special guest</a> with advanced copies at CXC (Cartoon Crossroads Columbus), plus <a href="https://cartooncrossroadscolumbus.org/session/the-sounds-of-silence-spotlight-on-maggie-umber/" target="_blank">The Sounds of Silence: Spotlight on Maggie Umber</a> conversation with OSU comics scholar Jared Gardner 2024'
   - '8/9/2024 interview on the <a href="https://huuno.dmitrysamarov.com/podcast/maggie-umber/" target="_blank">hu u no podcast.
     Click here to listen to the episode.</a> Artist and writer Dmitry Samarov and I talk about Chrysanthemum Under the Waves, 
