--- a/_pages/index.html
+++ b/_pages/index.html
@@ -101,7 +101,7 @@ doubles:
   9/26-9/29/2024 and on the fall leg of my Less is More Zine Tour.
 </p>
 <p>
-  The book release party will be held at <a href="https://www.librarything.com/venue/117381/Tangible-Books" target="_blank">Tangible Books</a> in Chicago on 10/25/2024.
+  The book release party will be held at <a href="https://tangiblebookschicago.com/" target="_blank">Tangible Books</a> in Chicago on 10/25/2024.
 </p>
 {% include blog-double.html %}
 <p>🖤</p>
