put cutw up for real, fix last post alts

--- a/_pages/books/chrysanthemum-under-the-waves.html
+++ b/_pages/books/chrysanthemum-under-the-waves.html
@@ -7,10 +7,10 @@ redirect_from:
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: "$35 PREORDER <br /> On sale: 10/22/24"
+price: "$35"
 button_id: SB5W5DNEJC7LS
 pages: 284 pgs, 6 in x 9 in
-materials: "softcover, smythsewn <br />ISBN: 979-8-218-41076-6"
+materials: "softcover, perfect bound <br />ISBN: 979-8-218-41076-6"
 images:
   - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-01.jpg
     alt: female and male figures in a dark room, in front of a fireplace, with chrysanthemums on the mantel
