--- a/_pages/index.html
+++ b/_pages/index.html
@@ -22,10 +22,10 @@ description: <p>Hello, my name is Maggie. I've been publishing books and zines i
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: "$35 PREORDER <br /> On sale: 10/22/24"
+price: "$35"
 button_id: SB5W5DNEJC7LS
 pages: 284 pgs, 6 in x 9 in
-materials: "softcover, smythsewn <br />ISBN: 979-8-218-41076-6"
+materials: "softcover, perfect bound <br />ISBN: 979-8-218-41076-6"
 blurbs:
   - Magical feats of comics communication within these stories, beautiful 
     tricks of mark making expressing what cannot be said. <br />I really love this book, very much. 
@@ -90,15 +90,6 @@ doubles:
   I was interviewed on the <a href="https://huuno.dmitrysamarov.com/podcast/maggie-umber/" target="_blank">hu u no podcast.
   Click here to listen to the episode.</a> Artist and writer Dmitry Samarov and I talk about Chrysanthemum Under the Waves, 
   self-publishing vs working with a publisher, my history as an cartoonist and why I left 2dcloud.
-</p>
-<p>
-  You can <a href="/chrysanthemum-under-the-waves.html">preorder</a> now. Preorders will ship in early October,
-  to arrive by October 22, 2024.
-</p>
-<p>
-  Advanced copies will also be 
-  available at <a href="https://www.cartooncrossroadscolumbus.org/" target="_blank">CXC (Cartoon Crossroads Columbus)</a>
-  9/26-9/29/2024 and on the fall leg of my Less is More Zine Tour.
 </p>
 <p>
   The book release party will be held at <a href="https://tangiblebookschicago.com/" target="_blank">Tangible Books</a> in Chicago on 10/25/2024.
