--- a/_posts/2024-10-21-autobiographix-interview.html
+++ b/_posts/2024-10-21-autobiographix-interview.html
@@ -4,15 +4,18 @@ author: Maggie Umber
 categories: reviews
 cover:
   path: /assets/images/blog/2024-10-21-autobiographix-interview-1.jpg
-  alt: Maggie Umber in a green and black wool sweater, holding a copy of The Academic Hour by Keren Katz
+  alt: "a woman's face with text in front of it, text reads: An interview with Maggie Umber, I find 
+  it frustrating that a thing drawn in a cartoony style or with word balloons is a comic, but a 
+  thing with panels that lacks word balloons and a cartoony style is not."
 doubles:
   - path: /assets/images/blog/2024-10-21-autobiographix-interview-2.jpg
-    alt: horse being ridden by a rib cage, as it itself trod upon train wheels
+    alt: a shelf in the London Gosh! Comics store, which includes the books of Maggie Umber
   - path: /assets/images/blog/2024-10-21-autobiographix-interview-3.jpg
-    alt: plush toast
+    alt: Thomas Campbell of Comics Blogger at Philly Comics Expo with Death Spark 2 and 
+      Chrysanthemum Under the Waves on his table
 singles:
   - path: /assets/images/blog/2024-10-21-autobiographix-interview-4.jpg
-    alt: a copy of The Academic Hour by Keren Katz
+    alt: Partners and Son sold out of Chrysanthemum Under the Waves and Jonesy by Maggie Umber
 ---
 
 <p>
@@ -51,7 +54,7 @@ singles:
 </p>
 {% include blog-single.html %}
 <p>
-  You can still preorder CUTW on <a href="/index.html">maggieumber.com</a>, pick up from me 
+  You can preorder CUTW on <a href="/index.html">maggieumber.com</a>, get it 
   at the book launch at 
   <a href="https://tangiblebookschicago.com/" target="_blank">Tangible books</a>
   on Friday, at 
