--- a/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
+++ b/_pages/wholesale/wholesale-chrysanthemum-under-the-waves.html
@@ -4,10 +4,10 @@ permalink: /wholesale-chrysanthemum-under-the-waves
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman in profile with long hair floating up, text reads: Chrysanthemum Under the Waves"
-price: "<s>Retail $35</s> <br />Wholesale $17.50 PREORDER<br />On sale: 10/22/24"
+price: "<s>Retail $35</s> <br />Wholesale $17.50"
 button_id: 5LFEPSPQT2VSJ
 pages: 284 pgs, 6 in x 9 in
-materials: "softcover, smythsewn <br />ISBN: 979-8-218-41076-6"
+materials: "softcover, perfect bound <br />ISBN: 979-8-218-41076-6"
 images:
   - path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-01.jpg
     alt: female and male figures in a dark room, in front of a fireplace, with chrysanthemums on the mantel
