cutw book launch post

--- a/_posts/2024-10-18-cutw-launch-at-tangible-books.html
+++ b/_posts/2024-10-18-cutw-launch-at-tangible-books.html
@@ -4,10 +4,10 @@ author: Maggie Umber
 categories: touring videos
 cover:
   path: /assets/images/blog/2024-10-18-cutw-launch-at-tangible-books-1.jpg
-  alt: "ZINEmercado 2023 poster with a flying bird"
+  alt: "a woman taking a breath, a black cloth covered chair in a dark room with a sword"
 singles:
   - path: /assets/images/blog/2024-10-18-cutw-launch-at-tangible-books-2.jpg
-    alt: "WE ARE HUNGRY zine cover"
+    alt: "text reads: CHRYSANTHEMUM UNDER THE WAVES book launch*Friday Oct 25 7-9pm*tangible books"
 trailer:
   path: /assets/videos/maggie-umber-the-witch-lawnwater.mp4
   type: video/mp4
