cutw book launch post without vid

--- a/_posts/2024-10-22-chrysanthemum-under-the-waves-out-now.html
+++ b/_posts/2024-10-22-chrysanthemum-under-the-waves-out-now.html
@@ -1,15 +1,11 @@
 ---
 title: Chrysanthemum Under the Waves
 author: Maggie Umber
-categories: touring videos
+categories: touring
 cover:
   path: /assets/images/books/maggie-umber-chrysanthemum-under-the-waves-cover.jpg
   alt: "a woman's face in profile with hair floating above her head, text reads: Chrysanthemum Under 
     the Waves, Maggie Umber"
-trailer:
-  path: /assets/videos/maggie-umber-cutw-trailer.mp4
-  type: video/mp4
-  credits: 'video and art by Maggie Umber'
 ---
 
 <p>
@@ -21,7 +17,6 @@ trailer:
   expressing what cannot be said. <br />I really love this book, very much. 
   <br />&mdash; Lale Westvind, author of Grip published by Perfectly Acceptable Press
 </p>
-{% include book-trailer.html %}
 <p>
   Buy it today on <a href="/chrysanthemum-under-the-waves.html">maggieumber.com</a>, or at your favorite comic shop:
 </p>
